--- a/config/database.yml
+++ b/config/database.yml
@@ -9,6 +9,9 @@ default: &default
   encoding: unicode
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   timeout: 5000
+  username: postgres
+  password: mancoba
+  host: localhost
 
 development:
   <<: *default
@@ -19,8 +22,8 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: db/test.sqlite3
+  database: my_blog_app_test
 
 production:
   <<: *default
-  database: db/production.sqlite3
+  database: my_blog_app_production
