--- a/config/database.yml
+++ b/config/database.yml
@@ -10,7 +10,7 @@ default: &default
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   timeout: 5000
   username: postgres
-  password: Icui4cu#
+  password: mancoba
   host: localhost
 
 development:
